--- a/Aventurias/src/css/userList.css
+++ b/Aventurias/src/css/userList.css
@@ -20,7 +20,7 @@ main{
     width: 100%;
     height: 100%;
     background-image: url("https://tse4.mm.bing.net/th?id=OIP.11XI3row9ek0X_zZsxRRiwHaFI&pid=Api") ;
-    background-color:rgba(2, 65, 100 ,0.6 );
+    background-color:#024164;
     background-size:cover;
     background-repeat: no-repeat;
     display: flex;
