--- a/Aventurias/src/css/createUser.css
+++ b/Aventurias/src/css/createUser.css
@@ -1,17 +1,31 @@
+.front{
+    width: 100%;
+    height: 20vh;
+    background-image: url("https://tse4.mm.bing.net/th?id=OIP.11XI3row9ek0X_zZsxRRiwHaFI&pid=Api") ;
+    background-color:#024164;
+    background-size:cover;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
 #form{
     background-color: white;
     width: 69vw;
-    margin-bottom: 10%;
-    position: relative;   
-    
+
 }
 #submitButton {
     margin-bottom: 10%;
 }
-#bodyForCreateUser {
+body {
     background-color: #96D5F8;
-    margin-right: 15vw;
-    margin-left: 16vw;
+    display:flex;
+    justify-content: center;
+    flex-direction: column;
+
     
 }
 #checkImages {
