--- a/Aventurias/src/css/userList.css
+++ b/Aventurias/src/css/userList.css
@@ -21,8 +21,8 @@ main{
 }
 
 .front{
-    width: auto;
-    height: 40vh;
+    width: 100%;
+    height: 50vh;
     background-image: url("https://tse4.mm.bing.net/th?id=OIP.11XI3row9ek0X_zZsxRRiwHaFI&pid=Api") ;
     background-color:#024164;
     background-size:cover;
