--- a/Aventurias/src/css/style.css
+++ b/Aventurias/src/css/style.css
@@ -4,8 +4,4 @@
 @import "userList.css";
 @import "createUser.css";
 @import "images.css";
-
-*{
-    margin: 0;
-    padding: 0;
-}
+@import "reset.css";
