--- a/Aventurias/src/css/editUser.css
+++ b/Aventurias/src/css/editUser.css
@@ -1,9 +1,16 @@
 
-.mask{
+.editUser{
+    display:flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+
+}
+
+.front{
     width:100%;
     height:50vh;
     background-image:url("https://tse4.mm.bing.net/th?id=OIP.11XI3row9ek0X_zZsxRRiwHaFI&pid=Api");
-    background-color:#024164;
     background-size:cover;
     background-repeat: no-repeat;
     display: flex;
@@ -21,7 +28,6 @@
         font-family: 'Work Sans', sans-serif;
         
 
-        
 }
 
 .mask .btn{
@@ -35,24 +41,9 @@
     background-color: white;
 }
 
-#form{
-    background-color: white;
-    width: 90vw;
-    height: auto;
-    margin-top:8vh !important;
-}
-#submitButton {
-    margin-bottom: 10%;
-}
-body {
-    background-color: #96D5F8;
-    display:flex;
-    justify-content: center;
-    flex-direction: column;
-    width: 100%;
 
-    
-}
+
+
 #checkImages {
     width: 100em;
     display: flex;
@@ -67,25 +58,17 @@ body {
     width: 10%;
 }
 
-.formSection{
+#formUpdateUser{
     display:flex;
     flex-direction: column;
-    width: 90vw;
+    width: 80vw;
+    align-items: center;
+    height: auto;
+    margin:5%;
     
-}
 
-#deleteButton  {
-    display: flex;
-    justify-content: flex-end;
 }
-.deleteButton{    
-    margin-top: 3vh;
-    background-color: #024164;
-    border-radius: 20px;
-    border:none;
-}
-
-#submitButton{
+#editSubmitButton{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -105,4 +88,17 @@ body {
     border-radius: 20px;
     border:none;
     height: 7vh;
+}
+.editPage{
+    background-color:#fee073;
+}
+.form{
+    background-color: white ;
+    width:90vw ;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-left: 5vw;
+
 }
