--- a/Aventurias/src/css/reset.css
+++ b/Aventurias/src/css/reset.css
@@ -1,6 +1,6 @@
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
-   License: none (public domain)
+   License: none (public domain)*/
 
 
 html, body, div, span, applet, object, iframe,
@@ -22,7 +22,7 @@ time, mark, audio, video {
 	
 	vertical-align: baseline;
 }
-HTML5 display-role reset for older browsers 
+/*HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
 	display: block;
@@ -44,4 +44,4 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
-}*/
+}
