--- a/Aventurias/src/css/userList.css
+++ b/Aventurias/src/css/userList.css
@@ -2,7 +2,7 @@
 
 
 thead{
-    background-color: #feda24d5 ;
+    background-color: #fee073 ;
     font-family: 'Work Sans', sans-serif;
     font-size: 18px; 
     color: #024164;
@@ -13,23 +13,20 @@ tbody{
 }
 
 
-main{
+.homePage{
     width: 100%;
 }
 
 .front{
-    width: 100%;
-    height: 50vh;
-    background-image: url("https://tse4.mm.bing.net/th?id=OIP.11XI3row9ek0X_zZsxRRiwHaFI&pid=Api") ;
-    background-color:#024164;
+    width:100%;
+    height:50vh;
+    background-image:url("https://tse4.mm.bing.net/th?id=OIP.11XI3row9ek0X_zZsxRRiwHaFI&pid=Api");
     background-size:cover;
     background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-size: x-large;
- 
 }
 #pageTitle h2{
     font-family: 'Oxygen', sans-serif;
@@ -42,10 +39,10 @@ main{
     background-color: transparent;
     font-size: x-large;
     font-weight: 700;
-      
+
 }
 
-body{
+.userlist{
 background-color: #96D5F8;
 display: flex;
 flex-direction: column;
@@ -55,6 +52,6 @@ width: 100%;
 
  @media (min-width:300px) and (max-width:1000px) {
         .btn {
-            width:70vw;
+            width:65vw;
         }
     }
