--- a/Aventurias/src/css/createUser.css
+++ b/Aventurias/src/css/createUser.css
@@ -40,9 +40,7 @@
     height: auto;
     margin-top:8vh !important;
 }
-#submitButton {
-    margin-bottom: 10%;
-}
+
 #checkImages {
     width: 100em;
     display: flex;
@@ -51,7 +49,7 @@
 }
 .point {
     margin-left: 2.75vw;
-    margin-top: 1vh;
+    margin-top: 1vw;
 }
 .check {
     width: 10%;
@@ -69,10 +67,13 @@
     justify-content: flex-end;
 }
 .deleteButton{    
-    margin-top: 3vh;
+    margin-top: 3vw;
     background-color: #024164;
     border-radius: 20px;
     border:none;
+    color: white;
+    height: 2.5vw;
+    width: 9vw;
 }
 
 #submitButton{
@@ -86,16 +87,13 @@
     background-color: #024164;  
     border-radius: 20px;
     border:none;
-    height: 7vh;
+    height: 5vw;
+    width: 7vw;
+    color: white;
+    margin:1vw;
 }
 
-.cancelButton{
-    background-color: transparent;
-    color: #024164;
-    border-radius: 20px;
-    border:none;
-    height: 7vh;
-}
+
 .newAdvPage{
     background-color:#96D5F8;
     display:flex;
@@ -103,4 +101,14 @@
     flex-direction: column;
     width: 100%;
 
+}
+@media (min-width:500px)and (max-width:1100px) {
+    .submitButton{
+        width: 7vw;
+        height: 4vw;
+    }
+    .deleteButton{
+        width:9vw;
+        height: 4vw;
+    }
 }
