--- a/Aventurias/src/css/editUser.css
+++ b/Aventurias/src/css/editUser.css
@@ -9,12 +9,13 @@
 
 .front{
     width:100%;
-    height:50vh;
+    height:30vh;
     background-image:url("https://tse4.mm.bing.net/th?id=OIP.11XI3row9ek0X_zZsxRRiwHaFI&pid=Api");
     background-size:cover;
     background-repeat: no-repeat;
+    background-position: center;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
         
@@ -45,13 +46,14 @@
 
 
 #checkImages {
-    width: 100em;
+    width: 100vw;
     display: flex;
     justify-content: space-between; 
     padding: 2vw;
+    align-items: center;
 }
 .point {
-    margin-left: 2.75vw;
+    margin-left: 2.5vw;
     margin-top: 1vh;
 }
 .check {
@@ -59,13 +61,15 @@
 }
 
 #formUpdateUser{
+    background-color: white ;
+    width:90vw ;
+    height: 50vw;
     display:flex;
-    flex-direction: column;
-    width: 80vw;
+    flex-direction: row;
     align-items: center;
-    height: auto;
-    margin:5%;
-    
+    justify-content: center;
+    margin-left: 5vw;
+    margin-top: 4vw;
 
 }
 #editSubmitButton{
@@ -79,26 +83,41 @@
     background-color: #024164;  
     border-radius: 20px;
     border:none;
-    height: 7vh;
+    height: 5vw;
+    width: 7vw;
+    color: white;
+    margin:1vw;
 }
 
-.cancelButton{
-    background-color: transparent;
-    color: #024164;
+.deleteButton{
+    margin-top: 3vw;
+    background-color: #024164;
     border-radius: 20px;
     border:none;
-    height: 7vh;
+    color: white;
+    height: 2.5vw;
+    width: 9vw;
 }
 .editPage{
     background-color:#fee073;
+    height: 75vw;
+    width: auto;
 }
-.form{
-    background-color: white ;
-    width:90vw ;
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-left: 5vw;
-
+@media (min-width:500px)and (max-width:1400px) {
+    .submitButton{
+        width: 7vw;
+        height: 4vw;
+    }
+    .deleteButton{
+        width: 9vw;
+        height: 4vw;
+    }
+   
+    .editPage{
+    height: 95vw;
+    }   
+    #formUpdateUser{
+    height: 60vw;
+    margin-top:2vw;
+    }
 }
