--- a/Aventurias/src/css/userList.css
+++ b/Aventurias/src/css/userList.css
@@ -32,7 +32,7 @@ tbody{
     font-family: 'Oxygen', sans-serif;
 }
 
-#pageTitle .btn{
+#pageTitle .newAdventure{
     width: 40vw;
     border:solid white 2px;
     border-radius:20px;
@@ -49,9 +49,12 @@ flex-direction: column;
 align-items: center;
 width: 100%;
 }
+img{
+    width: 4vw;
 
- @media (min-width:300px) and (max-width:1000px) {
-        .btn {
-            width:65vw;
+} 
+@media (min-width:300px) and (max-width:1000px) {
+        .newAdventure {
+            width:40vw;
         }
     }
