--- a/Aventurias/src/css/createUser.css
+++ b/Aventurias/src/css/createUser.css
@@ -72,8 +72,8 @@
     border-radius: 20px;
     border:none;
     color: white;
-    height: 2.5vw;
-    width: 9vw;
+    height:5vw;
+    width: 12vw;
 }
 
 #submitButton{
@@ -87,8 +87,8 @@
     background-color: #024164;  
     border-radius: 20px;
     border:none;
-    height: 5vw;
-    width: 7vw;
+    height: 4vw;
+    width:7vw;
     color: white;
     margin:1vw;
 }
@@ -102,13 +102,21 @@
     width: 100%;
 
 }
-@media (min-width:500px)and (max-width:1100px) {
+@media (min-width:300px)and (max-width:1100px) {
     .submitButton{
-        width: 7vw;
-        height: 4vw;
+        width: 20vw;
+        height: 7vw;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
     }
     .deleteButton{
-        width:9vw;
-        height: 4vw;
+        width:30vw;
+        height: 9vw;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
     }
 }
